<resources>
    <string name="courseArticle">CourseArticle</string>
    <string name="experienceArticle">ExperienceArticle</string>
    <string name="water_sports">水類運動</string>
    <string name="extreme_sport">極限運動</string>
    <string name="work_out">運動健身</string>
    <string name="ball_sports">球類運動</string>
    <string name="musical_instrument">音樂樂器</string>
    <string name="language_learning">語言學習</string>
    <string name="leisure_talent">休閒才藝</string>
    <string name="programming">程式設計</string>
    <string-array name="waterSportsName">
        <item>水肺潛水</item>
        <item>自由潛水</item>
        <item>衝浪</item>
        <item>水上瑜伽</item>
        <item>獨木舟</item>
        <item>游泳</item>
        <item>風帆衝浪</item>
        <item>水上摩托車</item>
    </string-array>
    <string-array name="extremeSportName">
        <item>攀岩</item>
        <item>滑雪</item>
        <item>滑板</item>
        <item>跑酷</item>
        <item>單車</item>
        <item>跳傘</item>
        <item>越野摩托車</item>
        <item>生存遊戲</item>
    </string-array>
    <string-array name="workOutName">
        <item>健美運動</item>
        <item>健身運動</item>
        <item>TRX懸吊系統訓練</item>
        <item>馬拉松</item>
        <item>有氧運動</item>
        <item>瑜珈</item>
        <item>防身術</item>
    </string-array>
    <string-array name="ballSportsName">
        <item>籃球</item>
        <item>排球</item>
        <item>桌球</item>
        <item>羽球</item>
        <item>網球</item>
        <item>足球</item>
        <item>棒球</item>
        <item>撞球</item>
        <item>高爾夫球</item>
        <item>保齡球</item>
    </string-array>
    <string-array name="musicalInstrumentName">
        <item>鋼琴</item>
        <item>吉他</item>
        <item>小提琴</item>
        <item>貝斯</item>
        <item>爵士鼓</item>
        <item>豎笛</item>
        <item>薩克斯風</item>
        <item>琵琶</item>
        <item>二胡</item>
    </string-array>
    <string-array name="languageLearningName">
        <item>英文</item>
        <item>日文</item>
        <item>韓文</item>
        <item>法文</item>
        <item>德文</item>
        <item>俄文</item>
        <item>義大利文</item>
    </string-array>
    <string-array name="leisureTalentName">
        <item>攝影</item>
        <item>陶藝</item>
        <item>烹飪</item>
        <item>裁縫</item>
        <item>書法</item>
        <item>街舞</item>
        <item>繪畫</item>
        <item>睡覺</item>
    </string-array>
    <string-array name="programmingName">
        <item>Java</item>
        <item>JavaScript</item>
        <item>JavaServlet</item>
        <item>MySQL</item>
        <item>Kotlin</item>
        <item>Objective-C</item>
        <item>Swift</item>
    </string-array>
    <string name="app_name">Master</string>
    <string name="addText">add_text</string>
    <string name="searchData">search_data</string>
    <string name="nf_title">Notification</string>
    <string name="nf_frag_time">11:00 AM</string>
    <string name="nf_frag_content">某某某學員也想要參加你的揪團</string>
    <string name="mg_title">Message</string>
    <string name="mg_frag_name">邊緣人</string>
    <string name="mg_frag_time">10:50 PM</string>
    <string name="mg_frag_content">你好你好你好你</string>
    <string name="mg_chatroom_send">send</string>
    <string name="mg_chatroom_etmessage">Enter a message</string>
    <string name="featured">精選</string>
    <string name="title_activity_experience_article">ExperienceArticleActivity</string>
    <string name="photo">My Photo</string>
    <string name="course">My Course</string>
    <string name="Mycourse">COURSE</string>
    <string name="courseName">COURSE</string>
    <string name="status">status</string>
    <string name="courseClass">course class</string>
    <string name="addImage">add Image</string>
    <string name="course_single">course</string>
    <string name="date">2018-02-18</string>
    <string name="single_name">Diving</string>
    <string name="single_price">$2000</string>
    <string name="msg_NoSpotsFound">No Course Found</string>
    <string name="msg_NoNetwork">No NetWork</string>
    <string name="msg_NoCoursesFound">No Courses Found</string>
    <string name="msg_NoCourseFound">No Course</string>
    <string name="findSuccess">Find Success</string>
    <string name="msg_DeleteFail">Delete Faild</string>
    <string name="msg_DeleteSuccess">Delete Success</string>
    <string name="confirm">Please confirm</string>
    <string name="alert_name">Course Name</string>
    <string name="confirm_content">You want to add a new course in your Course?</string>
    <string name="ok">OK</string>
    <string name="course_update">update</string>
    <string name="updateImage">update Image</string>
    <string name="updateSuccess">update success</string>
    <string name="updateFailed">update failed</string>
    <string name="student_name">STUDENT</string>
    <string name="register_status">STATUS</string>
    <string name="total">Total 10 People</string>
    <string name="msg_InsertFail">insert fail</string>
    <string name="msg_InsertSuccess">insert Success</string>
    <string name="apply">Apply</string>
    <string name="contectCoach">Contect</string>
    <string name="checkNetWork">Please check your network</string>
    <string name="insert">Insert Your Name</string>
    <string name="user_name">User Name</string>
    <string name="last_sentance">last santance</string>
    <string name="last_message">last message</string>
    <string name="submit">SUBMIT</string>
    <string name="nf_newnotificaiton">你有新的通知訊息</string>
    <string name="new_article">Add article</string>
    <string name="etMsg_empty">尚未輸入文字</string>
    <string name="successed">留言發布成功</string>
    <string name="comment_send">發送</string>
    <string name="no_device_to_crop">This device doesn\'t support the crop action!</string>
    <string name="facebook_app_id">1029355117213161</string>
    <string name="fb_login_protocol_scheme">fb1029355117213161</string>
    <string name="course_article">首頁</string>
    <string name="experience_article">貼文</string>
    <string name="message">訊息</string>
    <string name="notification">通知</string>
    <string name="information">關於</string>
    <string name="AddArticle">建立貼文</string>
    <string name="input">在想些什麼?</string>
    <string name="addToExperience">新增到貼文</string>
    <string name="picture_empty">請選擇照片</string>
    <string name="content_empty">請輸入文字</string>
    <string name="new_post_success">新增成功</string>
    <string name="camera_turn_off">相片權限尚未開啟</string>
    <string name="write_external_storage_turn_off">外存權限尚未開啟</string>
    <string name="no_camera">沒有支援相機功能</string>
    <string name="title_for_article_dialog">想要稍後在完成貼文嗎?</string>
    <string name="msg_for_article_dialog">將內容存為草稿或捨棄</string>
    <string name="cancel">取消</string>
    <string name="continue_edit">繼續編輯</string>
    <string name="give_up_edit">捨棄貼文</string>
    <string name="store">儲存為草稿</string>
    <string name="no_related_courses">查無相關課程！</string>
    <string name="join_count">參加人數: </string>
    <string name="memberName">會員名稱</string>
    <string name="memberInformation">會員資訊</string>
    <string name="edit">編輯</string>
    <string name="identity">身份</string>
    <string name="gender">性別</string>
    <string name="address">地址</string>
    <string name="phoneNumber">電話號碼</string>
    <string name="noDataYet">尚未擁有資料</string>
    <string name="personalProfile">個人簡介</string>
    <string name="notYetProfiled">尚未編輯個人簡介</string>
    <string name="professional_skill">專業技能</string>
    <string name="signOut">登出</string>
    <string name="userOut">確定要登出?</string>
    <string name="edit_profile">編輯個人檔案</string>
    <string name="edit_user_name">用戶名稱</string>
    <string name="determine">確定</string>
    <string name="modifyUserInformation">確認修改會員資料?</string>
    <string name="errorName">您的名稱是?</string>
    <string name="errorAccess">您的身份是?</string>
    <string name="errorGender">你的性別是?</string>
    <string name="errorAddress">您的地址是?</string>
    <string name="errorPhone">您的聯絡號碼是?</string>
    <string name="errorProfile">您的個人簡介是?</string>
    <string name="enter_name">請輸入名稱...</string>
    <string name="enter_address">請輸入地址...</string>
    <string name="enter_phone">請輸入號碼...</string>
    <string name="enter_profile">請輸入個人簡介...</string>
    <string name="errorModify">修改失敗,請稍後再試...</string>
    <string name="successedModify">修改成功!</string>
    <string name="isSaveOrAdort">是否要保存修改呢?</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="give_up">捨棄</string>
    <string name="edit_profession_skill">編輯專業技能</string>
    <string name="selectProfessionCagegory">選擇專業類別</string>
    <string name="selectProfessionItem">選擇專業項目</string>
    <string name="back">返回</string>
    <string name="repeatProfession">當前技能已存在</string>
    <string name="addSuccessed">添加成功</string>
    <string name="addFailed">添加失敗,請稍後在試</string>
    <string name="success">移除成功</string>
    <string name="failed">移除失敗,請稍後在試</string>
    <string name="modifyUserImage">編輯會員照片</string>
    <string-array name="listPortraitStr">
        <item>拍攝大頭貼</item>
        <item>選擇大頭貼</item>
        <item>拍攝封面照片</item>
        <item>選擇封面照片</item>
    </string-array>
    <string name="errorExternalStorage">外部儲存體出錯</string>
    <string name="successUploadImage">圖片上傳成功</string>
    <string name="setProfession">設定>></string>
    <string name="profession_dialog_text">請給予應用程式相關權限,才可使用以下功能 ! </string>
    <string name="account_empty">帳號不可為空</string>
    <string name="password_empty">密碼不可為空</string>
    <string name="errorAccountPassword">帳號,密碼錯誤!</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="log_in">登入</string>
    <string name="sign_in">註冊</string>
    <string name="welcome">登入成功 ! </string>
    <string name="name">姓名</string>
    <string name="sign_in_prompt">貼心提醒:\n\n\t\t帳號格式：6~12 碼英文數字 , 開頭為英文 ...\n\t\t密碼格式：6~12 碼英文數字 ...\n\t\t</string>
    <string name="errorAccount">帳號格式不正確</string>
    <string name="errorPassword">密碼格式不正確</string>
    <string name="repeatAccount">此帳號已被使用</string>
    <string name="registerAccount">註冊失敗,請稍候</string>
    <string name="canUseAccount">此帳號可以使用</string>
    <string name="errorServer">伺服器異常, 無法獲取會員資料, 請聯絡管理員</string>
    <string name="coach">教練</string>
    <string name="student">學員</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="noProfessionalSkillsYet">尚未選擇專業技能</string>
    <string name="photo_title">相片集</string>
    <string name="comment_count">個留言</string>
    <string name="photo_save">儲存照片</string>
    <string name="photo_delete">刪除照片</string>
    <string name="comment_title">留言</string>
    <string name="finish">完成</string>
    <string name="comment_hint">\t留言...</string>
    <string name="comment_empty">尚未輸入文字</string>
    <string name="comment_success">留言發布成功</string>
    <string name="like">讚</string>
    <string name="home">主頁</string>
    <string name="phone">通話</string>
    <string name="msg">聊天</string>
    <string name="refreshing">加載中</string>
    <string name="refreshing_finish">加載完畢</string>
    <string name="experience_post_title">的貼文</string>
    <string name="can_cell_yourself">不能打電話給自己</string>
    <string name="release">發布</string>
    <string name="delete">刪除</string>
    <string name="empty_photos">目前相簿無圖片</string>
    <string name="empty_portrait">尚未設置大頭貼</string>
    <string name="comments_empty">目前尚無留言</string>
    <string name="course_name">請輸入課程名稱:</string>
    <string name="course_category_item">專業項目</string>
    <string name="course_detail">請輸入課程資訊:</string>
    <string name="course_date">請選擇開課日期</string>
    <string name="course_number">請輸入課程人數:</string>
    <string name="course_price">請輸入價格:</string>
    <string name="course_location">請輸入地點:</string>
    <string name="course_need">請輸入課前準備:</string>
    <string name="course_qualification">請輸入具備條件:</string>
    <string name="course_note">請輸入注意事項:</string>
    <string name="course_send">建立課程</string>
    <string name="course_deadline">請選擇截止日期</string>
</resources>