<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_gray"/>
        <TextView
            android:id="@+id/alert_content"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_content"
            android:textAlignment="center"
            android:textSize="19sp"/>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/alert_cancel"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/account_btn_style"/>
            <Button
                android:id="@+id/alert_ok"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/account_btn_style"
                />
        </LinearLayout>
    </LinearLayout>



</FrameLayout>
