<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBarMaster"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/comment_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFinish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/finish"
                android:textColor="#00f" />
        </FrameLayout>

    </android.support.v7.widget.Toolbar>


    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/master_toolbar_shadow" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvComment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_frame_item"
                android:ems="10"
                android:hint="@string/comment_hint"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@drawable/master_send" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
